--------------------------------------------------------------------------------------------------
Release notes version 1.7.5_beta : Enhancements, modifications and corrected bugs since version 1.7.4 :
--------------------------------------------------------------------------------------------------
31/01/17 (TRUST)  Bug fixed   : modele_turbulence WALE with turbulence_paroi negligeable and Cw=0 is now ok
31/01/17 (TRUST)  Bug fixed   : Update of the temps_precedent at a resume_last_time without tinit
--------------------------------------------------------------------------------------------------
Release notes version 1.7.4 : Enhancements, modifications and corrected bugs since version 1.7.3 :
--------------------------------------------------------------------------------------------------
09/12/16 (Tools)  Announcement: New Documentation Generic and Reference Guides
24/11/16 (TRUST)  Portability : Linux distribution CentOS 7, Ubuntu 16 and gcc 6.2.0 supported
23/11/16 (TRUST)  New keyword : Add new option to ExtrudeBord. ExtrudeBord improved
22/11/16 (TRUST)  Major change: Syntaxe modification of predefined field energie_cinetique renamed as energie_cinetique_totale and creation of energie_cinetique_elem
20/10/16 (TRUST)  New feature : Polygone 
29/07/16 (Tools)  Minor change: Update the VisIt configuration of host profiles automatically on several clusters (CCRT and DM2S)
22/07/16 (TRUST)  Minor change: Options -evol and -wiz added to the trust script (TRUST_PLOT2D and TRUST_WIZZARD)
20/07/16 (TRUST)  Minor change: Update reprise_auto script with new archiving option
29/06/16 (TRUST)  Portability : Linux distribution Fedora 24 and gcc 6.1.1 supported
29/06/16 (TRUST)  Bug fixed   : Fixed bug with "turbulence_paroi Paroi_TBLE" on output of tble_mesh.dat file in parallel mode
28/06/16 (TRUST)  Bug fixed   : Fixed bug about using dt_impr_ustar and  dt_impr_ustar_mean_only together