@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.7.5_beta : Enhancements, modifications and corrected bugs since version 1.7.4 :
 --------------------------------------------------------------------------------------------------
+17/02/17 (TRUST)  New keyword : Add new method for Reduction_0D post field: normalized_norm_L2 [ =norme_L2(field)/norme_L2(1) ]
 31/01/17 (TRUST)  Bug fixed   : modele_turbulence WALE with turbulence_paroi negligeable and Cw=0 is now ok
 31/01/17 (TRUST)  Bug fixed   : Update of the temps_precedent at a resume_last_time without tinit
 --------------------------------------------------------------------------------------------------
